# guessing-game-1

./: .gitignore  database.json  guess10-21eba7ab34ad.json  main.py  pyproject.toml  web.py
cogs/: brackets.py  check.py  config.py  dm.py  dmreport.py  guess.py  helpers.py  manipulate.py  points.py  show.py  textcreate.py  vote.py
