[tool.poetry]
name = "repl_python3_guessing-game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
tinydb = "^4.4.0"
discord-py-slash-command = "^1.1.2"
flask = "^2.0.1"
pandas = "^1.2.4"
bs4 = "^0.0.1"
selenium = "^3.141.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
